--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "pg": "^8.9.0"
   }
 }
